# glacium-repo

./: .gitignore  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  README.md  agents.md  multi_cp_plot.py  postprocess_mesh_multi.py  pyproject.toml  specs_pipelineapi.md  specs_postprocessing.md  teccy.py
docs/: adding_engines.rst  adding_jobs.rst  adding_recipes.rst  architecture.rst  conf.py  config_manager.rst  configurator_job.rst  custom_engine.rst  full_power_study.rst  glacium.cli.rst  glacium.config.rst  glacium.engines.rst  glacium.managers.rst  glacium.models.rst  glacium.recipes.rst  glacium.rst  glacium.utils.rst  grid_dependency_study.rst  index.rst  installation.rst  modules.rst  pipeline.rst  pointwise_mesh_generation.rst  quick_start.rst  quickstart.rst  run_builder.rst  task_stubs.md  template_mapping.rst  time_dependency_study.rst  xfoil_variable_flow.rst
glacium/: __init__.py  constants.py  fensap.py  index.yaml  main.py  pipeline.py  setup.py  templating.py
glacium2/: api.py  config.py  glacium2.uml.puml  main.py
report/: converg.drop.000002  converg.drop.000003  converg.drop.000004  converg.drop.000005  converg.drop.000006  converg.drop.000007  converg.drop.000008  converg.drop.000009  converg.drop.000010  converg.drop.000011  converg.drop.000012  converg.drop.000013  converg.drop.000014  converg.drop.000015  converg.drop.000016  converg.drop.000017  converg.eid.000001  converg.eid.000002  converg.eid.000003  converg.eid.000004  converg.eid.000005  converg.eid.000006  converg.eid.000007  converg.eid.000008  converg.eid.000009  converg.eid.000010  (+24 more)
(+922 files in other folders)
